# skeleton

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang_options.cmake  make_coverage_target.cmake  make_executable_sanitized_target.cmake  make_sanitized_target.cmake  make_shared_library_sanitized_target.cmake  make_static_library_sanitized_target.cmake  msvc_options.cmake
common/: CMakeLists.txt
common/include/: CommandLineArgument.h  CommandLineParser.h  Errors.h  Helpers.h  Logger.h  NotNull.h  stdafx.h
common/src/: CommandLineArgument.cpp  CommandLineParser.cpp  Errors.cpp  Helpers.cpp  Logger.cpp
dataapi/: CMakeLists.txt
dataapi/include/: Api.h  Application.h  BoostEchoBootstrapper.h  CommandLineArgument.h  CommandLineParser.h  ConnectionFactory.h  EchoConnection.h  EchoTcpServer.h  Errors.h  IBootstrapper.h  IConnection.h  IServer.h  ISocket.h  PlainSocket.h  TcpClient.h  stdafx.h
dataapi/src/: Api.cpp  Application.cpp  BoostEchoBootstrapper.cpp  CommandLineArgument.cpp  CommandLineParser.cpp  ConnectionFactory.cpp  EchoConnection.cpp  EchoTcpServer.cpp  Errors.cpp  PlainSocket.cpp  TcpClient.cpp
dataapitests/: CMakeLists.txt
dataapitests/include/: stdafx.h
dataapitests/src/: ApiTests.cpp  IntegrationTests.cpp
echo/: CMakeLists.txt
echo/include/: Application.h  BoostEchoBootstrapper.h  ConnectionFactory.h  EchoConnection.h  EchoTcpServer.h  IBootstrapper.h  IConnection.h  IServer.h  ISocket.h  PlainSocket.h  TcpClient.h
echo/src/: Application.cpp  BoostEchoBootstrapper.cpp  ConnectionFactory.cpp  EchoConnection.cpp  EchoTcpServer.cpp  PlainSocket.cpp  TcpClient.cpp
echotests/: CMakeLists.txt
echotests/include/: stdafx.h
echotests/src/: UnitTests.cpp
event/: CMakeLists.txt
event/include/: AbstractNamedThread.h  AbstractThread.h  IEvent.h  IQueue.h  IThread.h  Queue.h  stdafx.h
event/src/: AbstractNamedThread.cpp  AbstractThread.cpp  Queue.cpp
skeleton/: CMakeLists.txt
skeleton/include/: stdafx.h
skeleton/src/: Main.cpp
